--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,4 +21,8 @@ Depends:
     R (>= 2.10)
 VignetteBuilder: knitr
 Imports: 
-    tibble
+    randomForest,
+    class,
+    tibble,
+    dplyr,
+    ggplot2
